--- a/.github/workflows/maven_pipeline.yml
+++ b/.github/workflows/maven_pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ $default-branch ]
 
 jobs:
-  build:
+  maven-verify:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
